Fix icons missing Fix 3D viewer not showing

--- a/src/main/resources/org/dockfx/default.css
+++ b/src/main/resources/org/dockfx/default.css
@@ -110,8 +110,10 @@
  ******************************************************************************/
 
 .dock-node-border {
-  -fx-padding: 10;
-  -fx-background-color: transparent;
+  -fx-padding: 5;
+  -fx-border-color: #ABABAB;
+  -fx-border-radius: 5;
+  -fx-background-radius: 5;
   -fx-effect: dropshadow( three-pass-box, rgba(0,0,0,0.4), 10,0.2,0,0 );
 }
 
@@ -125,6 +127,7 @@
  */
 .dock-node {
   -fx-background-color: -fx-background;
+  -fx-background-radius: 5;
 }
 
 /* In order to support TabPane, titleBar's background color is transparent
